# VisibleKCL

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
api/: Cargo.toml
api/src/: lib.rs
brres-patched/: Cargo.toml
brres-patched/src/: enums.rs  lib.rs
brres-sys-patched/: .cargo_vcs_info.json  build.rs
brres-sys-patched/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
src/: main.rs
src/gobj/: BeltCrossing.brres  BeltCurveA.brres  BeltEasy.brres  CarA2.brres  CarA3.brres  Crane.kcl  Crescent64.brres  Crescent64_4.brres  DKrockGC.brres  DKtreeA64.brres  DKtreeA64_1.brres  DKtreeB64.brres  DKturibashiGC.brres  DonkyCannonGC.brres  DonkyCannon_wii.brres  FireSnake_1.brres  FlagA1.brres  FlagA2.brres  HeyhoBallGBA.brres  HeyhoTreeGBA.brres  K_bomb_car.brres  K_car_body.brres  K_sticklift00.brres  KmoonZ.brres  Mdush.brres  Mdush.kcl  MiiObj01.brres  MiiObj02.brres  MiiObj03.brres  MiiObjD02.brres  MiiObjD03.brres  MiiSignWario.brres  MiiStatueBL1.brres  MiiStatueD1.brres  MiiStatueL3.brres  MiiStatueM2.brres  PalmTree.brres  Piston.brres  ShMiiObj01.brres  ShMiiObj02.brres  (+78 more)
src/util/: binary.rs  brres.rs  draw.rs  enums.rs  kcl.rs  kmp.rs  mod.rs  szs.rs
szs-patched/: .cargo_vcs_info.json
szs-patched/src/: MK8.hpp  lib.rs
test/: debug.txt  senior_course.szs
vkcl/: Cargo.toml  README.md
vkcl-cli/: Cargo.toml
vkcl-cli/src/: main.rs
vkcl-py/: .gitignore  Cargo.toml  pyproject.toml
vkcl-py/src/: lib.rs
vkcl/brres-patched/: .cargo_vcs_info.json  .gitignore  Cargo.toml.orig  dummy.json
vkcl/src/: lib.rs
(+281 files in other folders)
