[workspace]
resolver = "3"
members = ["vkcl", "vkcl-cli", "vkcl-py"]

[workspace.dependencies]
anyhow = "1.0.102"
brres = "0.1.7"
image = "0.25.9"
szs = "0.3.7"

[patch.crates-io]
szs = { path = "vkcl/szs-patched" }
brres-sys = { path = "vkcl/brres-sys-patched" }
brres = { path = "vkcl/brres-patched" }